Minor fixes to stylesheets that control user-specific visibility

--- a/esp/public/media/default_styles/qsd.css
+++ b/esp/public/media/default_styles/qsd.css
@@ -8,7 +8,7 @@
 .not_logged_in_hidden {
   display: none;
 }
-.morphed_hidden {
+.unmorph_hidden {
   display: none;
 }
 
